finito ma non sono sicuro che calcolo matematico

--- a/esercizzio/index.html
+++ b/esercizzio/index.html
@@ -26,7 +26,8 @@
             <!--<li class="list-group-item">il tuo colore preferito e il <span id="preferito"></span></li>
             <li class="list-group-item">sei nato il <span id="nascita"></span></li>
             <li class="list-group-item">tutto <span id="tutto"></span></li>-->
-            <li>il prezzo del biglietto e di<span id="prezzoFinale"></span>$</li>
+            <li>il prezzo del biglietto e di<span id="prezzoFinale"></span>$ senza sconto </li>
+            <li>il prezzo del biglietto e di<span id="prezzoFinale2"></span>$ con lo sconto</li>
         </ul>
     </div>
 
